tests/baselines/reference/parserGreaterThanTokenAmbiguity8.errors.txt
parserGreaterThanTokenAmbiguity8.ts(1,9): error TS1109: Expression expected.


==== parserGreaterThanTokenAmbiguity8.ts (1 errors) ====
    1 >>/**/> 2;
            ~
!!! error TS1109: Expression expected.